[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'gpxviewer'
version = '3.1.2'
description='GPX Viewer is an application for viewing GPX files and plotting altitude profiles'
readme = 'README.md'
urls.homepage = 'https://github.com/salsergey/gpxviewer'
requires-python = '>=3.7'
license = 'GPL-3.0-or-later'
keywords = ['PyQt', 'QCustomPlot', 'GPX']
authors = [
    {email = 'salsergey@gmail.com'},
    {name = 'Sergey Salnikov'}
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: X11 Applications :: Qt',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: User Interfaces'
]
dependencies = [
    'lxml',
    'PyQt6',
    'QCustomPlot_PyQt6'
]

[project.gui-scripts]
gpxv = "gpxviewer:main"

[tool.setuptools]
packages = ['gpxviewer']

[tool.setuptools.data-files]
'share/applications' = ['data/gpxviewer.desktop']
'share/mime/packages' = ['data/gpxviewer.xml']
'share/pixmaps' = ['data/icons/gpxviewer.png']
'share/icons/hicolor/128x128/mimetypes' = ['data/icons/gpxviewer.png']
